--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <center><h1>An in-depth look into NYC open restaurant applications</h1></center>
 <center><h2>By Carlos Genis</h2></center>
-<a href="https://data.cityofnewyork.us/Transportation/Open-Restaurant-Applications/pitm-atqc/data">Link to dataset</a>
+<a href="https://data.cityofnewyork.us/Transportation/Open-Restaurant-Applications/pitm-atqc/data">Link to dataset</a><br>
+<a href=https://github.com/CarlosGenis/FinalProject>Link to Github repo</a><br>
+<h2>My research results: </h2>
+<p>Total applications submitted: 13001</p>
+<p>Sidewalk Seating Application Results: yes 10963 no 2038</p>
+<p>Percentage of sidewalk seating applications approved: 84.32 %</p>
+<p>Roadwalk Seating Application Results:  yes 8335 no 4666</p>
+<p>Percentage of roadwalk seating applications approved: 64.11 %</p>
+<h2>Screenshot of terminal compiling: </h2>
+<img src="image.png" alt= "Compiler" width= "500" height="300">
